' Generated by UML Generator
' Encoded: nP8nJyCm48Lt_mfBNOfG9EOEg106kjAY3eZXuhocfoPsTBu4YTB_Zg5Kf9MAs3hQxztpTtUUHYNHhgbDtB1lIQYnhgOOxrI5YqunSy7F-HtsngovX7KiheOntovxZnv25HQ8-Y3SmswDjTVR5AliThOXzcEIAaxiF0NwwkNrQcBxmANP7J8Me2Nh-Z64pRww4BoD3xPqfhBCWo-vWTSu55mNDJIG9INXs5A4K8DyScKLz3b2Phxjz4lQW_o-duVL2hWG0XLHXPpQ7nPABEnncEinLIj8Ay8J7BSOK8nES4VdSBCYSBqaXGmlsz0bjBnhXn7_Q2pX3tUNPH-tPnim9rF-spo5BzEd_0G
' URL: http://www.plantuml.com/plantuml/uml/nP8nJyCm48Lt_mfBNOfG9EOEg106kjAY3eZXuhocfoPsTBu4YTB_Zg5Kf9MAs3hQxztpTtUUHYNHhgbDtB1lIQYnhgOOxrI5YqunSy7F-HtsngovX7KiheOntovxZnv25HQ8-Y3SmswDjTVR5AliThOXzcEIAaxiF0NwwkNrQcBxmANP7J8Me2Nh-Z64pRww4BoD3xPqfhBCWo-vWTSu55mNDJIG9INXs5A4K8DyScKLz3b2Phxjz4lQW_o-duVL2hWG0XLHXPpQ7nPABEnncEinLIj8Ay8J7BSOK8nES4VdSBCYSBqaXGmlsz0bjBnhXn7_Q2pX3tUNPH-tPnim9rF-spo5BzEd_0G
' Generated on: 2025-12-14T17:16:50.189030

@startuml
skinparam classAttributeIconSize 0
hide circle

class BeverageTestDrive {
  +{static} main(args: String[]): void
}

class TeaWithHook {
  +brew(): void
  +addCondiments(): void
  +customerWantsCondiments(): boolean
  -getUserInput(): String
}

class CoffeeWithHook {
  +brew(): void
  +addCondiments(): void
  +customerWantsCondiments(): boolean
  -getUserInput(): String
}

abstract class CaffeineBeverageWithHook {
  +prepareRecipe(): void
  #brew(): void
  #addCondiments(): void
  -boilWater(): void
  -pourInCup(): void
  #customerWantsCondiments(): boolean
}

TeaWithHook --|> CaffeineBeverageWithHook
CoffeeWithHook --|> CaffeineBeverageWithHook
@enduml